@@ -8,6 +8,10 @@ the rules for this file:
   * keep the format consistent (79 char width, M/D/Y date format).
 
 ------------------------------------------------------------------------------
+01/20/11 Daniel K. O.
+        * Applied patch from Daniel Fiser, fix infinite loop in libccd caused
+          by numerical problems.
+
 01/06/11 Daniel K. O.
         * Applied patch from Daniel Fiser, efficient libccd tests when using
           CONTACTS_UNIMPORTANT.
